[gd_scene load_steps=5 format=3 uid="uid://268sn82oihby"]

[ext_resource type="PackedScene" uid="uid://hr756cx0syfv" path="res://card.tscn" id="1_3bn2l"]
[ext_resource type="Script" path="res://main.gd" id="1_emee8"]
[ext_resource type="Texture2D" uid="uid://cdv4cpp1h28qf" path="res://karte-720.png" id="2_v6s1k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tasj7"]
bg_color = Color(0, 0, 0, 0.411765)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.937255, 0.894118, 0, 1)

[node name="Node2D" type="Node2D"]
use_parent_material = true
script = ExtResource("1_emee8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_v6s1k")
expand_mode = 2

[node name="CardMoney2" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 200.0
offset_top = 100.0
offset_right = 350.0
offset_bottom = 250.0

[node name="CardMoney1" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 200.0
offset_top = 250.0
offset_right = 350.0
offset_bottom = 400.0

[node name="CardArmy2" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 50.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 250.0

[node name="CardArmy1" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 50.0
offset_top = 250.0
offset_right = 200.0
offset_bottom = 400.0

[node name="CardAction6" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 450.0
offset_top = 100.0
offset_right = 600.0
offset_bottom = 250.0

[node name="CardAction7" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 600.0
offset_top = 100.0
offset_right = 750.0
offset_bottom = 250.0

[node name="CardAction8" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 750.0
offset_top = 100.0
offset_right = 900.0
offset_bottom = 250.0

[node name="CardAction9" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 900.0
offset_top = 100.0
offset_right = 1050.0
offset_bottom = 250.0

[node name="CardAction10" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 1050.0
offset_top = 100.0
offset_right = 1200.0
offset_bottom = 250.0

[node name="CardAction1" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 450.0
offset_top = 250.0
offset_right = 600.0
offset_bottom = 400.0

[node name="CardAction2" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 600.0
offset_top = 250.0
offset_right = 750.0
offset_bottom = 400.0

[node name="CardAction3" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 750.0
offset_top = 250.0
offset_right = 900.0
offset_bottom = 400.0

[node name="CardAction4" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 900.0
offset_top = 250.0
offset_right = 1050.0
offset_bottom = 400.0

[node name="CardAction5" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 1050.0
offset_top = 250.0
offset_right = 1200.0
offset_bottom = 400.0

[node name="CardHistory" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 137.0
offset_top = 460.0
offset_right = 287.0
offset_bottom = 610.0

[node name="CardHand1" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 228.0
offset_top = 750.0
offset_right = 378.0
offset_bottom = 900.0

[node name="CardHand2" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 395.0
offset_top = 750.0
offset_right = 545.0
offset_bottom = 900.0

[node name="CardHand3" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 562.0
offset_top = 750.0
offset_right = 712.0
offset_bottom = 900.0

[node name="CardHand4" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 726.0
offset_top = 750.0
offset_right = 876.0
offset_bottom = 900.0

[node name="CardHand5" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 889.0
offset_top = 750.0
offset_right = 1039.0
offset_bottom = 900.0

[node name="CardHand6" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 1051.0
offset_top = 750.0
offset_right = 1201.0
offset_bottom = 900.0

[node name="CardHand7" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 61.0
offset_top = 750.0
offset_right = 211.0
offset_bottom = 900.0

[node name="CardHand8" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 92.0
offset_top = 880.0
offset_right = 242.0
offset_bottom = 1030.0

[node name="CardHand9" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 257.0
offset_top = 880.0
offset_right = 407.0
offset_bottom = 1030.0

[node name="CardHand10" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 424.0
offset_top = 880.0
offset_right = 574.0
offset_bottom = 1030.0

[node name="CardHand11" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 592.0
offset_top = 880.0
offset_right = 742.0
offset_bottom = 1030.0

[node name="CardHand12" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 758.0
offset_top = 880.0
offset_right = 908.0
offset_bottom = 1030.0

[node name="CardHand13" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 923.0
offset_top = 880.0
offset_right = 1073.0
offset_bottom = 1030.0

[node name="CardHand14" parent="." instance=ExtResource("1_3bn2l")]
offset_left = 1085.0
offset_top = 880.0
offset_right = 1235.0
offset_bottom = 1030.0

[node name="CardTable1" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 407.0
offset_top = 425.0
offset_right = 557.0
offset_bottom = 575.0

[node name="CardTable2" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 557.0
offset_top = 425.0
offset_right = 707.0
offset_bottom = 575.0

[node name="CardTable3" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 707.0
offset_top = 425.0
offset_right = 857.0
offset_bottom = 575.0

[node name="CardTable4" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 857.0
offset_top = 425.0
offset_right = 1007.0
offset_bottom = 575.0

[node name="CardTable5" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 1007.0
offset_top = 425.0
offset_right = 1157.0
offset_bottom = 575.0

[node name="CardTable6" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 407.0
offset_top = 575.0
offset_right = 557.0
offset_bottom = 725.0

[node name="CardTable7" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 557.0
offset_top = 575.0
offset_right = 707.0
offset_bottom = 725.0

[node name="CardTable8" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 707.0
offset_top = 575.0
offset_right = 857.0
offset_bottom = 725.0

[node name="CardTable9" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 857.0
offset_top = 575.0
offset_right = 1007.0
offset_bottom = 725.0

[node name="CardTable10" parent="." instance=ExtResource("1_3bn2l")]
visible = false
offset_left = 1007.0
offset_top = 575.0
offset_right = 1157.0
offset_bottom = 725.0

[node name="Panel" type="Panel" parent="."]
offset_left = 1263.0
offset_right = 1519.0
offset_bottom = 724.0
scale = Vector2(2.56208, 1.49076)

[node name="GuiMain" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1283.0
offset_top = 16.0
offset_right = 1902.0
offset_bottom = 1065.0

[node name="BtnExit" type="Button" parent="GuiMain"]
layout_mode = 0
offset_left = -4.0
offset_top = 1013.0
offset_right = 619.0
offset_bottom = 1059.0
text = "Exit"

[node name="BtnNewGame" type="Button" parent="GuiMain"]
layout_mode = 0
offset_left = -4.0
offset_top = 961.0
offset_right = 619.0
offset_bottom = 1007.0
text = "New Game"

[node name="GameTitle" type="RichTextLabel" parent="GuiMain"]
layout_mode = 0
offset_right = 609.0
offset_bottom = 108.0
theme_override_colors/default_color = Color(0.929412, 0.941176, 0.870588, 1)
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 36
theme_override_font_sizes/italics_font_size = 31
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/mono_font_size = 0
bbcode_enabled = true
text = "[b]Chronicles: Rise of Rome[/b]
[i]Deck Building Solitaire Game[/i]"
fit_content = true

[node name="History" type="RichTextLabel" parent="GuiMain"]
layout_mode = 0
offset_top = 125.0
offset_right = 609.0
offset_bottom = 233.0
theme_override_colors/default_color = Color(0.929412, 0.941176, 0.870588, 1)
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 0
theme_override_font_sizes/mono_font_size = 0
bbcode_enabled = true
text = "[b]Card: Subtitle[/b]
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
fit_content = true

[node name="Panel2" type="Panel" parent="."]
offset_left = 2.0
offset_top = 1032.0
offset_right = 495.0
offset_bottom = 1064.0
scale = Vector2(2.56208, 1.49076)

[node name="GuiStatus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 46.0
offset_top = 1033.0
offset_right = 1222.0
offset_bottom = 1079.0

[node name="Status" type="RichTextLabel" parent="GuiStatus"]
layout_mode = 0
offset_left = 50.0
offset_top = 5.0
offset_right = 1169.0
offset_bottom = 42.0
theme_override_font_sizes/normal_font_size = 24
text = "Turn 1 - "

[node name="GuiHint" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 77.0
offset_top = 639.0
offset_right = 376.0
offset_bottom = 730.0

[node name="Panel3" type="Panel" parent="GuiHint"]
offset_left = -5.0
offset_top = -10.0
offset_right = 116.0
offset_bottom = 64.0
scale = Vector2(2.56208, 1.49076)
theme_override_styles/panel = SubResource("StyleBoxFlat_tasj7")

[node name="Hint" type="RichTextLabel" parent="GuiHint"]
layout_mode = 0
offset_left = 5.0
offset_top = -4.0
offset_right = 296.0
offset_bottom = 64.0
theme_override_colors/default_color = Color(0.937255, 0.894118, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Hint
2nd row"

[node name="BtnHints" type="Button" parent="GuiHint"]
layout_mode = 0
offset_left = 72.0
offset_top = 63.0
offset_right = 223.0
offset_bottom = 94.0
text = "OK"

[connection signal="pressed" from="GuiMain/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="GuiMain/BtnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="GuiHint/BtnHints" to="." method="_on_btn_hints_pressed"]
